--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme # Needed for the remote theme to work
+title: Eleonora Minaeva
+description: PhD Researcher in Political Science at the European University Institute
 
