--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme # Needed for the remote theme to work
 title: Eleonora Minaeva
+logo: /assets/images/eminaeva-pic.jpg 
 description: PhD Researcher in Political Science at the European University Institute
