--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-remote-theme # Needed for the remote theme to work
-
+  - jekyll-remote-theme
 title: Eleonora Minaeva
 description: PhD Researcher in Political Science at the European University Institute
-logo: /assets/images/eminaeva-pic.jpg  # Укажите путь к изображению
+logo: /assets/images/eminaeva-pic.jpg
 show_downloads: false
