--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,14 @@
-remote_theme: orderedlist/orderedlist
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 
 title: Eleonora Minaeva
-author: Eleonora Minaeva
-position: PhD Researcher in Political Science
-affiliation: European University Institute
+description: PhD Researcher in Political Science at the European University Institute
+logo: /assets/images/eminaeva-pic.jpg
+show_downloads: false
 
 email: eleonora.minaeva@eui.eu
-
-avatar: /assets/images/eminaeva-pic.jpg
-
-social:
-  cv: CV-2025.pdf
-  github: https://github.com/eminaeva
-  scholar: https://scholar.google.com/citations?user=m_UTmvAAAAAJ&hl=en
-  linkedin: https://www.linkedin.com/in/eleonora-minaeva-b84929125/
+cv: CV-2025.pdf
+google_scholar: https://scholar.google.com/citations?user=m_UTmvAAAAAJ&hl=en
+linkedin: https://www.linkedin.com/in/eleonora-minaeva-b84929125/
+github: https://github.com/eminaeva
